# dcrhTest

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  structure.md
configs/: qwen3_1p7b_4b_core.yaml
data/: calibration_math_mixed_100.jsonl  calibration_math_mixed_200.jsonl
docs/: DESIGN.md  PROJECT_STRUCTURE.md  QUICKSTART_CN.md
examples/: dataset.jsonl
experiments/calibration_dataset/: README.md  build_math_calibration.py  manifest.example.yaml  test_build_math_calibration.py
experiments/tau_selection/: README.md  score_tau.py  tau_utils.py  test_tau_utils.py
scripts/: baseline.py  calibrate.py  check_offline.py  run.py  summarize.py  threshold.py
server/: start_vllm_pair.sh  vllm_pair.env.example
src/dcrh/: __init__.py  config.py  prompt.py
src/dcrh/commands/: __init__.py  baseline.py  calibrate.py  run.py  summarize.py  threshold.py
src/dcrh/core/: __init__.py  boundaries.py  calibration.py  costs.py  monitor.py  protocol.py  reference.py  router_signals.py  router_state.py  scoring.py  sequential.py
src/dcrh/evaluation/: __init__.py  benchmarks.py  data.py  verifier.py
src/dcrh/runtime/: __init__.py
src/dcrh/runtime/transformers/: __init__.py  attention_backend.py  entropy.py  model_runner.py  sampling.py
src/dcrh/utils/: io.py  offline.py
tests/: test_attention_backend.py  test_benchmark_adapters.py  test_boundaries.py  test_costs.py  test_entropy.py  test_local_runner_tiny.py  test_reference.py  test_router_signals.py  test_router_state.py  test_sequential.py  test_vllm_protocol.py
(+3 files in other folders)
